  * attachment: Files can be dragged into the edit page to upload them.
    Multiple file batch upload support. Upload progress bars.
    AJAX special effects. Impemented using the jQuery-File-Upload widget.
    (If you don't have javascript don't worry, I kept that working too.)
    (Sponsored by The TOVA Company.)
  * Add libtext-multimarkdown-perl to Suggests. Closes: #630705

 -- Joey Hess <joeyh@debian.org>  Thu, 09 Jun 2011 10:06:44 -0400

ikiwiki (3.20110608) unstable; urgency=high

  * ikiwiki-mass-rebuild: Fix tty hijacking vulnerability by using su.
    (Once su's related bug #628843 is fixed.) Thanks, Ludwig Nussel.
    (CVE-2011-1408)
  * search: Update search page when page.tmpl or searchquery.tmpl are locally
    modified.

 -- Joey Hess <joeyh@debian.org>  Fri, 03 Jun 2011 20:30:35 -0400

ikiwiki (3.20110431) unstable; urgency=low

  * Danish translation update. Closes: #625721
  * Danish underlay translation update. Closes: #625765
    (Thanks, Jonas Smedegaard)
  * Support YAML::XS by not passing decoded unicode to Load. Closes: #625713
  * openid, aggregate, pinger: Use Net::INET6Glue if available to
    support making ipv6 connections. (Note that if LWPx::ParanoidAgent
    is installed, it defeats this for openid.)
  * Add additional directive quoting styles, to better support nested
    directives. Both triple-single-quote and heredoc quotes can be used.
    (Thanks, Timo Paulssen)
  * Changed license of madduck's python plugins from GPL-2 to BSD-2-clause.
  * po: support language codes in the form of 'es_AR', and 'arn'. (intrigeri)
    Closes: #627844
  * po: Make po4a warn, not error on a malformed document. (intrigeri)
  * Support the Hiawatha web server which sets HTTPS=off rather than not
    setting it. (There does not seem to be a standard here.)

 -- Joey Hess <joeyh@debian.org>  Fri, 03 Jun 2011 14:38:23 -0400

ikiwiki (3.20110430) unstable; urgency=low

  * meta: Allow adding javascript to pages. Only when htmlscrubber is