@@ -13,6 +13,7 @@ ikiwiki (3.20110609) UNRELEASED; urgency=low
     (If you don't have javascript don't worry, I kept that working too.)
     (Sponsored by The TOVA Company.)
   * Add libtext-multimarkdown-perl to Suggests. Closes: #630705
+  * headinganchors: Plugin by Paul Wise that adds ids to <hn> headings.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 09 Jun 2011 10:06:44 -0400
 
